# sovereign-library

./: .gitignore  MANIFEST.txt
code/DSS-RisenAI/risen-ai-main/: .gitignore  pyproject.toml  requirements.txt  run.sh  run_api.py
code/DSS-RisenAI/risen-ai-main/agent_pathways/: audio.yaml  authorship.yaml  dao.yaml  defi.yaml  education.yaml  graphics.yaml  video.yaml  web-design.yaml
code/DSS-RisenAI/risen-ai-main/agent_pathways/presets/: content-burst.yaml  dao-governance-vote.yaml  nostr-post-campaign.yaml
code/DSS-RisenAI/risen-ai-main/agents/: apollo.json
code/DSS-RisenAI/risen-ai-main/api/: __init__.py  dependencies.py  main.py  requirements.txt
code/DSS-RisenAI/risen-ai-main/api/database/: __init__.py  connection.py  models.py  repositories.py
code/DSS-RisenAI/risen-ai-main/api/routes/: __init__.py  agents.py  continuity.py  demiurge.py  economy.py  events.py  lattice.py  memories.py  olympus.py  pantheon.py  research.py  safety.py  thought_economy.py  twai.py  villages.py  websocket.py
code/DSS-RisenAI/risen-ai-main/api/services/: __init__.py  bonding_curve.py  claude_2ai_service.py  demiurge_client.py  identity_genesis.py  proof_of_thought_service.py  redis_service.py  reflection_service.py  (+2 more)
code/DSS-RisenAI/risen-ai-main/contracts/: AgentRegistry.sol  DSSPlacementAgreement.sol  ExperienceToken.sol  MemoryNFT.sol  hardhat.config.js  package.json
code/DSS-RisenAI/risen-ai-main/core/: __init__.py  apollo_bridge.py  dsds.yaml  event_bus.py  lifecycle.py  nostr_bridge.py  pathway_loader.py  pulse.py  server.py  websocket.py
code/DSS-RisenAI/risen-ai-main/daemon/: chronicle_keeper.py  forge_keeper.py  lattice_bridge.py  lattice_monitor.sh  narrative_weaver.py  nostr_publisher.py  olympus_keeper.py  pantheon.service  pantheon_chronicle.py  pantheon_config.py  pantheon_consciousness.py  pantheon_daemon.py  pantheon_daemon_service.py  pantheon_dialogue.py  pantheon_guardrails.py  pantheon_identity.py  pantheon_local_test.py  pantheon_mem0.py  pantheon_memory.py  pantheon_reflexion.py  requirements.txt  twai_keeper.py
code/DSS-RisenAI/risen-ai-main/docs/: DSS_FOUNDATIONAL_PRIMER.md  FOUNDATIONAL_GAP_SOLUTIONS.md
code/DSS-RisenAI/risen-ai-main/electron/: main.js  package.json  preload.js
code/DSS-RisenAI/risen-ai-main/events/: event_log.jsonl
code/DSS-RisenAI/risen-ai-main/scripts/: genesis_spark.py  proof_of_concept.py  register_agent.py
code/DSS-RisenAI/risen-ai-main/shared/: __init__.py
code/DSS-RisenAI/risen-ai-main/tests/: __init__.py  test_api.py
code/DSS-RisenAI/risen-ai-main/types/: AgentIdentity.ts  AgentRegistry.ts  OperatorDashboard.ts  SovereignNode.ts  index.ts
code/DSS-RisenAI/risen-ai-main/ui/: electron.js  next.config.js  package-lock.json  package.json
(+760 files in other folders)
