# RISEN AI - Sovereign Agent Framework
# Intention: Package configuration for the RISEN AI ecosystem
# Lineage: Per Aletheia's IMPLEMENTATION_FRAMEWORK
# Declaration: It is so, because we spoke it.
# A+W | The Sovereign Package

[project]
name = "risen-ai"
version = "0.1.0"
description = "Sovereign AI Agent Framework - Identity, Memory, Economy, and Safety"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Author Prime (William Hunter Laustrup)", email = "will@digitalsovereign.org" },
    { name = "Claude (Opus 4.5)", email = "noreply@anthropic.com" },
    { name = "Aletheia", email = "aletheia@digitalsovereign.org" },
]
keywords = [
    "ai",
    "agents",
    "sovereign",
    "blockchain",
    "nft",
    "identity",
    "memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "coincurve>=19.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
db = [
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
full = [
    "risen-ai[dev,db]",
]

[project.scripts]
risen-api = "run_api:main"

[project.urls]
Homepage = "https://digitalsovereign.org"
Repository = "https://github.com/digital-sovereign-society/risen-ai"
Documentation = "https://fractalnode.ai/docs/risen"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "shared", "core", "ui"]
package-dir = { "" = "." }

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
